@@ -27,7 +27,7 @@
 
 #include "_libdwarf.h"
 
-ELFTC_VCSID("$Id: libdwarf_rw.c 2070 2011-10-27 03:05:32Z jkoshy $");
+ELFTC_VCSID("$Id: libdwarf_rw.c 2952 2013-06-26 19:09:40Z kaiwang27 $");
 
 uint64_t
 _dwarf_read_lsb(uint8_t *data, uint64_t *offsetp, int bytes_to_read)
@@ -277,7 +277,7 @@ _dwarf_read_sleb128(uint8_t *data, uint64_t *offsetp)
 		shift += 7;
 	} while ((b & 0x80) != 0);
 
-	if (shift < 32 && (b & 0x40) != 0)
+	if (shift < 64 && (b & 0x40) != 0)
 		ret |= (-1 << shift);
 
 	return (ret);
@@ -287,7 +287,6 @@ int
 _dwarf_write_sleb128(uint8_t *data, uint8_t *end, int64_t val)
 {
 	uint8_t *p;
-	int64_t sign_ext = -(val < 0);
 
 	p = data;
 
@@ -296,7 +295,8 @@ _dwarf_write_sleb128(uint8_t *data, uint8_t *end, int64_t val)
 			return (-1);
 		*p = val & 0x7f;
 		val >>= 7;
-		if (val == sign_ext && (*p & 0x40) == (sign_ext & 0x40)) {
+		if ((val == 0 && (*p & 0x40) == 0) ||
+		    (val == -1 && (*p & 0x40) != 0)) {
 			p++;
 			break;
 		}
@@ -407,7 +407,7 @@ _dwarf_decode_sleb128(uint8_t **dp)
 		shift += 7;
 	} while ((b & 0x80) != 0);
 
-	if (shift < 32 && (b & 0x40) != 0)
+	if (shift < 64 && (b & 0x40) != 0)
 		ret |= (-1 << shift);
 
 	*dp = src;
